<resources>
    <string name="app_name">Basics</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="invalid_username">Недопустимое значение</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="register">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_in">Вход</string>
    <string name="name">Имя</string>
    <string name="family">Фамилия</string>
    <string name="number">Номер телефона</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="regist_done">Зарегистрироваться</string>
</resources>