<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_enter"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginStart="24dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/enter"
            android:background="#00FFFFFF"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:layout_marginLeft="24dp" />

        <com.google.android.material.button.MaterialButton
            android:visibility="invisible"
            android:id="@+id/go_to_registration"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:shapeAppearance="@style/GreenMaterialButtonFill"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="24dp"
            app:cornerRadius="4dp"
            android:text="@string/register" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>